objects/SBQQ__ProductRule__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProductRuleHelp</customHelpPage>
    <description>Rule that governs valid product configurations.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this rule is active or inactive.</description>
        <inlineHelpText>Flag that indicates whether this rule is active or inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ErrorMessage__c</fullName>
        <description>Message displayed if this rule fails to be satisfied.</description>
        <inlineHelpText>Message displayed if this rule fails to be satisfied.</inlineHelpText>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__EvaluationEvent__c</fullName>
        <description>Event that causes this rule to be evaluated.</description>
        <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
        <label>Evaluation Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Load</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Scope__c</fullName>
        <description>Scopes the rule to the entire quote or specific product.</description>
        <inlineHelpText>Applies the rule to the entire quote or specific product.</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of this rule. Validation rules display error messages. Selection rules cause products to be added or suggested.</description>
        <inlineHelpText>Type of this rule. Validation rules display error messages. Selection rules cause products to be added or suggested.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Rule</label>
    <listViews>
        <fullName>Panel1_ProductRule</fullName>
        <filterScope>Queue</filterScope>
        <label>Panel1</label>
        <queue>Panel1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>